# tg-bot-full-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  pull-request.yml  push.yml  release.yml  upload-docker-image.yml
src/: main.rs
