[package]
name = "tg-bot-full-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["async-read-body", "typed-header"] }
axum-macros = "0.5.0"
clap = { version = "4.5.34", features = ["derive", "env"] }
clap_derive = "4.5.18"
reqwest = { version = "0.12.15", features = ["stream"], default-features = false }
tokio = { version = "1.44.1", features = ["full"] }
