[package]
name = "tg-bot-full-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["async-read-body", "typed-header"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
clap_derive = "4.5.18"
reqwest = { version = "0.12.15", features = ["stream"], default-features = false }
tokio = { version = "1.45.0", features = ["full"] }
